# 1pic1day

./: .gitignore  Procfile  README.md  README.me  RandomPicture.ipynb  config.py  manage.py  models.py  pyproject.toml  requirements.txt  run.py  setup.cfg
app/: __init__.py  forms.py  models.py  routes.py
app/errors/: handlers.py
app/main/: forms.py  routes.py
app/static/css/: custom.css
app/templates/: 404.html  album.html  base.html  create_album.html  edit_album.html  index.html  my_albums.html  profile.html
app/templates/errors/: 401.html  404.html  500.html  auth_error.html
migrations/versions/: 2e8b64c48f50_.py  2eb9cb42b6f6_.py  380841c775f2_.py  4529c6b27b5c_.py  48edcf792b69_.py  70a656fcdcc8_.py  a4352c5cb050_.py  a795f459a3b1_.py  f604bbe7f97e_.py  fc89ffddcc5f_.py
